--- a/style.css
+++ b/style.css
@@ -1,1 +1,93 @@
+html {
+  scroll-behavior: smooth; 
+}
+.body
+* {
+    min-height: 10vh; 
+    margin: 0; padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: 20px;
+    font-family: Lato;sans-serif;
+  }
+
+* {
+    box-sizing: border-box;
+  }    
+.header {
+    height: 30px;
+    margin: 0 auto;
+    padding: 0%;
+    background-color: rgb(162, 103, 105) ;
+  }
+.main {
+  border: 1px solid rgb(245, 208, 208);
+  background-color:rgb(255, 213, 194)
+}
+.footer {
+  border: 1px solid rgb(245, 208, 208);
+  background-color:rgb(255, 213, 194)
+}
+.container {
+  max-width: 1440px; 
+  margin: 0 auto;
+    padding: 0%;
+}
+.nav-list {
+  display: inline-block;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+  flex-wrap: wrap;
+  padding: 0%;
+  margin: 0 auto;
+  }
+.nav-link {
+  font-size: 20px;
+  font-weight: bold;
+  padding: 0 20px;
+  line-height: 30px;
+  text-decoration: none;
+  color:rgb(39, 16, 51);
+}
+.nav-link:hover {
+  font-size: 20px;
+  font-weight: bold;
+  padding: 0 25px;
+  line-height: 35px;
+  text-decoration: none;
+  transition: .1s;
+  color:rgb(216, 255, 221);
+}
+.main-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.section {
+  width: 50%;
+  padding: 10px;
+  line-height: 36px;
+  }
+@media (max-width: 768px) {
+  .section {
+    width: 100%;
+  }
+}
+ul.nav-list > li {
+  display: inline-block;
+  list-style: none;
+  padding: 5px;		
+}
+.section-title {
+    letter-spacing: 5px;
+}
+.profile-logo {
+  width: 145px;
+  height: 190px;
+}
+.logo {
+  width: 125px;
+  height: 125px;
+}
 
